--- a/notebooks/dev.ipynb
+++ b/notebooks/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dd.read_csv('../data/datasets/interim/features/*.csv')"
+    "df = dd.read_csv('../data/tests/interim/features/*.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,10 +53,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>block</th>\n",
+       "      <th>api</th>\n",
        "      <th>invocation</th>\n",
-       "      <th>package</th>\n",
-       "      <th>method_name</th>\n",
+       "      <th>block</th>\n",
        "      <th>app</th>\n",
        "      <th>malware</th>\n",
        "    </tr>\n",
@@ -64,47 +63,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>public constructor &lt;init&gt;()Va.smali</td>\n",
+       "      <td>La/a;-&gt;&lt;init&gt;</td>\n",
        "      <td>invoke-direct</td>\n",
-       "      <td>Landroid/arch/a/a/b;</td>\n",
-       "      <td>&lt;init&gt;</td>\n",
-       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>static constructor &lt;clinit&gt;()Va.smali</td>\n",
+       "      <td>%D8%AA%D9%90%D9%82%D9%86%D9%8A</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>public constructor &lt;init&gt;()Va.smali</td>\n",
-       "      <td>invoke-direct</td>\n",
-       "      <td>Ljava/util/HashMap;</td>\n",
-       "      <td>&lt;init&gt;</td>\n",
-       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>Ljava/lang/Runtime;-&gt;getRuntime</td>\n",
+       "      <td>invoke-static</td>\n",
+       "      <td>static constructor &lt;clinit&gt;()Va.smali</td>\n",
+       "      <td>%D8%AA%D9%90%D9%82%D9%86%D9%8A</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>public a(Ljava/lang/Object;)Za.smali</td>\n",
+       "      <td>Ljava/lang/Runtime;-&gt;availableProcessors</td>\n",
        "      <td>invoke-virtual</td>\n",
-       "      <td>Ljava/util/HashMap;</td>\n",
-       "      <td>containsKey</td>\n",
-       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>static constructor &lt;clinit&gt;()Va.smali</td>\n",
+       "      <td>%D8%AA%D9%90%D9%82%D9%86%D9%8A</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>constructor &lt;init&gt;(Landroid/arch/a/a/b$c;Landr...</td>\n",
+       "      <td>Ljava/lang/Object;-&gt;&lt;init&gt;</td>\n",
        "      <td>invoke-direct</td>\n",
-       "      <td>Landroid/arch/a/a/b$e;</td>\n",
-       "      <td>&lt;init&gt;</td>\n",
-       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>private constructor &lt;init&gt;()Va.smali</td>\n",
+       "      <td>%D8%AA%D9%90%D9%82%D9%86%D9%8A</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>constructor &lt;init&gt;(Landroid/arch/a/a/b$c;Landr...</td>\n",
+       "      <td>La/b;-&gt;&lt;init&gt;</td>\n",
        "      <td>invoke-direct</td>\n",
-       "      <td>Landroid/arch/a/a/b$e;</td>\n",
-       "      <td>&lt;init&gt;</td>\n",
-       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>private constructor &lt;init&gt;()Va.smali</td>\n",
+       "      <td>%D8%AA%D9%90%D9%82%D9%86%D9%8A</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -112,29 +106,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               block      invocation  \\\n",
-       "0                public constructor <init>()Va.smali   invoke-direct   \n",
-       "1                public constructor <init>()Va.smali   invoke-direct   \n",
-       "2               public a(Ljava/lang/Object;)Za.smali  invoke-virtual   \n",
-       "3  constructor <init>(Landroid/arch/a/a/b$c;Landr...   invoke-direct   \n",
-       "4  constructor <init>(Landroid/arch/a/a/b$c;Landr...   invoke-direct   \n",
+       "                                        api      invocation  \\\n",
+       "0                             La/a;-><init>   invoke-direct   \n",
+       "1           Ljava/lang/Runtime;->getRuntime   invoke-static   \n",
+       "2  Ljava/lang/Runtime;->availableProcessors  invoke-virtual   \n",
+       "3                Ljava/lang/Object;-><init>   invoke-direct   \n",
+       "4                             La/b;-><init>   invoke-direct   \n",
        "\n",
-       "                  package  method_name  \\\n",
-       "0    Landroid/arch/a/a/b;       <init>   \n",
-       "1     Ljava/util/HashMap;       <init>   \n",
-       "2     Ljava/util/HashMap;  containsKey   \n",
-       "3  Landroid/arch/a/a/b$e;       <init>   \n",
-       "4  Landroid/arch/a/a/b$e;       <init>   \n",
+       "                                   block                             app  \\\n",
+       "0  static constructor <clinit>()Va.smali  %D8%AA%D9%90%D9%82%D9%86%D9%8A   \n",
+       "1  static constructor <clinit>()Va.smali  %D8%AA%D9%90%D9%82%D9%86%D9%8A   \n",
+       "2  static constructor <clinit>()Va.smali  %D8%AA%D9%90%D9%82%D9%86%D9%8A   \n",
+       "3   private constructor <init>()Va.smali  %D8%AA%D9%90%D9%82%D9%86%D9%8A   \n",
+       "4   private constructor <init>()Va.smali  %D8%AA%D9%90%D9%82%D9%86%D9%8A   \n",
        "\n",
-       "                                                 app  malware  \n",
-       "0  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  \n",
-       "1  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  \n",
-       "2  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  \n",
-       "3  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  \n",
-       "4  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  "
+       "   malware  \n",
+       "0        0  \n",
+       "1        0  \n",
+       "2        0  \n",
+       "3        0  \n",
+       "4        0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
