--- a/notebooks/asignment_3_report.ipynb
+++ b/notebooks/asignment_3_report.ipynb
@@ -242,10 +242,61 @@
     "\n",
     "### Baseline Model\n",
     "\n",
-    "- The baseline model used the A Matrix above fed as feature. Specifically, it uses A.A.T to make number of apps dimensions feature matrix feeding into Naive SVC. I chose accuracy as my baseline model since accuracy is a mostly common used metrics in ML, and it also used in Hindroid paper. (may change when deeper ML Deployment evolved later)\n",
+    "- The baseline mode lies under directory `src/models/baseline.py`\n",
     "\n",
-    "- The baseline model has roughly 64% accuracy, which perform better than I expected."
+    "- It uses the results from EDA to build on following features engineering pipelin upon each app:\n",
+    "\n",
+    "1. Preprocess\n",
+    "\n",
+    "    - numerical:\n",
+    "        - `api`: number of unique apis\n",
+    "        \n",
+    "        - `block`: number of unique blocks\n",
+    "        \n",
+    "        - `package`: number of packages\n",
+    "        \n",
+    "    - categorical:\n",
+    "    \n",
+    "        - `most_invo`: the most called invocation\n",
+    "        \n",
+    "        - `most_api`: the most called api\n",
+    "        \n",
+    "        - `package`: the most used package\n",
+    "        \n",
+    "2. Column Transfer:\n",
+    "\n",
+    "    - the column transfere process follows following rule based on data type:\n",
+    "    \n",
+    "        - `numerical`: Standardized by Scikit Learn Standard Scaler\n",
+    "        \n",
+    "        - `catogorical`: Transferred to dummy variable by Scikit Learn OneHot Encoder\n",
+    "        \n",
+    "3. Classifier:\n",
+    "\n",
+    "    - Logistic Regression\n",
+    "    \n",
+    "    - SVM\n",
+    "    \n",
+    "    - Random Forest\n",
+    "\n",
+    "    The performance and result showed below"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
