--- a/notebooks/asignment_3_report.ipynb
+++ b/notebooks/asignment_3_report.ipynb
@@ -216,32 +216,13 @@
     "\n",
     "### API Call Extraction\n",
     "\n",
-    "  Each app's samli code will be extracted into api calls and be grouped into .csv file. For example, instagram's smali code will be extracted as instagram.csv with following columns: `block`, `invocation`, `package`, `method_name`, `app`.\n",
+    "  Each app's samli code will be extracted into api calls and be grouped into .csv file. For example, instagram's smali code will be extracted as `instagram.csv` with following columns: `block`, `invocation`, `package`, `method_name`, `app`.\n",
     "\n",
     "- Extract API Calls of Apps: `package` + '->' + `method_name`\n",
     "- Extract method name of API Calls: `method_name`\n",
     "- Extract Code blocks of API Calls: `block`\n",
     "- Extract Package used of each API Calls: `package`\n",
-    "- Extract Invocation of each API Calls: `invocation`\n",
-    "\n",
-    "### Matrix Construction\n",
-    "\n",
-    "  we used Hindroid's method to construct our feature matrix, the description as follows:\n",
-    "\n",
-    "#### A Matrix\n",
-    "\n",
-    "  $a_{ij}$ is defined as:\n",
-    "  \"If $app_i$ contains $api_j$ , then $a_{ij} = 1$; otherwise, $a_{ij} = 0$.\"\n",
-    "\n",
-    "#### B Matrix\n",
-    "  \n",
-    "  $b_{ij}$ is defined as:\n",
-    "  \"If $api_i$ and $api_j$ co-exist in the same code block, then $b_{ij}$ = 1; otherwise, $b_{ij}$ = 0.\"\n",
-    "\n",
-    "#### P Matrix\n",
-    "\n",
-    "  $p_{ij}$ is defined as:\n",
-    "  \"If $api_i$ and $api_j$ are with the same package name, then $p_{ij}$ = 1; otherwise, $p_{ij}$ = 0.\""
+    "- Extract Invocation of each API Calls: `invocation`"
    ]
   },
   {
@@ -256,7 +237,7 @@
     "\n",
     "- It uses the results from EDA to build on following features engineering pipelin upon each app:\n",
     "\n",
-    "1. Preprocess\n",
+    "#### 1. Preprocess\n",
     "\n",
     "    - numerical:\n",
     "        - `api`: number of unique apis\n",
@@ -273,7 +254,7 @@
     "        \n",
     "        - `package`: the most used package\n",
     "        \n",
-    "2. Column Transfer:\n",
+    "#### 2. Column Transfer:\n",
     "\n",
     "    - the column transfere process follows following rule based on data type:\n",
     "    \n",
@@ -281,7 +262,7 @@
     "        \n",
     "        - `catogorical`: Transferred to dummy variable by Scikit Learn OneHot Encoder\n",
     "        \n",
-    "3. Classifier:\n",
+    "#### 3. Classifier:\n",
     "\n",
     "    - Logistic Regression\n",
     "    \n",
@@ -296,14 +277,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- with 40 samples, the Training metrics and Testing metrics are showed below:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Training"
+    "#### 4. Results:\n",
+    "\n",
+    "     with 40 samples, the Training metrics and Testing metrics are showed below:\n",
+    "\n",
+    "##### Training"
    ]
   },
   {
@@ -407,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Testing"
+    "##### Testing"
    ]
   },
   {
@@ -499,147 +477,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The baseline model actually has a very decent result. Also, the mainly error those classifier made was False Positive (making error that it is a malware). This is a faily strict baseline mode to classify the malwares"
+    "##### Observations\n",
+    "\n",
+    "- The baseline model actually has a very decent result. Also, the mainly error those classifier made was False Positive (making error that it is a malware). This is a faily strict baseline mode to classify the malwares\n",
+    "\n",
+    "- In training large data, the baseline mode will be computational heavy especially because of the computational demanding of the preprocess part."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage Instruction\n",
+    "### Hindroid Model\n",
     "\n",
-    "### Use `run.py`\n",
+    "#### 1. Preprocess w/ Matrix Construction\n",
     "\n",
-    "#### Data Ingestion\n",
+    "  we used Hindroid's method to construct our feature matrix, the description as follows:\n",
     "\n",
-    "##### Data Sampling Paramater\n",
+    "##### A Matrix\n",
     "\n",
-    "```json\n",
-    "{\n",
-    "    \"size\": 40,\n",
-    "    \"test\": true,\n",
-    "    \"mfp\": \"*****\"\n",
-    "}\n",
-    "```\n",
-    "- `size`: how many apps need to be sampled\n",
-    "- `test`: is it for your test set?\n",
-    "- `mfp`: the directory of malware smali code\n",
+    "  $a_{ij}$ is defined as:\n",
+    "  \n",
+    "  \"If $app_i$ contains $api_j$ , then $a_{ij} = 1$; otherwise, $a_{ij} = 0$.\"\n",
+    "  \n",
+    "###### implementation Detail\n",
+    "- using spark to create an adjacency matrix by first assigning every unique api calls and app with ids using `stringIndexer`, then output the unique pair of api id and app id and feeding into the sparse coordinate matrix to construct APP x API A Matrix\n",
+    "        \n",
+    "##### B Matrix\n",
+    "  \n",
+    "  $b_{ij}$ is defined as:\n",
+    "  \n",
+    "  \"If $api_i$ and $api_j$ co-exist in the same code block, then $b_{ij}$ = 1; otherwise, $b_{ij}$ = 0.\"\n",
     "\n",
-    "##### Data Ingestion Parameter\n",
+    "###### implementation Detail\n",
+    "- Using the same approach of A to construct an API x Block matrix.\n",
+    "- Taking the dot product of (API x Block) and (Block x API) matrix to get an squared matrix, then filtering every non-negative term to 1, Then we have API x API B Matrix\n",
     "\n",
-    "```json\n",
-    "{\n",
-    "\"dir\": \"data/tests/\", \n",
-    "\"m_dir\": \"*****\"\n",
-    "\"urls\": [\n",
-    "    \"https://apkpure.com/plague-inc/com.miniclip.plagueinc\",\n",
-    "    \"https://apkpure.com/instagram/com.instagram.android\",\n",
-    "    \"https://apkpure.com/youtube/com.google.android.youtube\",\n",
-    "    \"https://apkpure.com/google-chrome-fast-secure/com.android.chrome\",\n",
-    "    \"https://apkpure.com/facebook/com.facebook.katana\"\n",
-    "    ],\n",
-    "\"verbose\": false,\n",
-    "\"clean\": true\n",
-    "}\n",
-    "```\n",
+    "##### P Matrix\n",
     "\n",
-    "- `dir`: the output directory of data ingestion.\n",
-    "- `m_dir`: the directory of malware data\n",
-    "- `urls`: the urls of apks to download.\n",
-    "- `verbose`: verbose the process of data ingestion or not.\n",
-    "- `clean`: delete apk file after data ingestion or not.\n",
+    "  $p_{ij}$ is defined as:\n",
+    "  \n",
+    "  \"If $api_i$ and $api_j$ are with the same package name, then $p_{ij}$ = 1; otherwise, $p_{ij}$ = 0.\"\n",
+    "  \n",
+    "###### implementation Detail\n",
     "\n",
+    "- Similiar to B matrix, first generating API x Package matrix and then take dot product and filtering.\n",
     "\n",
-    "```bash\n",
-    "#fetching data\n",
-    "python run.py data\n",
-    "```\n",
+    "#### 2. Fit into Precomputed Kernel SVM\n",
     "\n",
-    "#### Data Process\n",
+    "- With the Matrices, we can make classifiers based on different Kernel Path. In specific, we have AA^T, ABA^T, APA^T, and APBP^TA^T implemented as kernel function of SVM. We used scikit learn built SVC to make our classifier. (sklearn.svm.SVC(kernel = 'precomputed').\n",
     "\n",
-    "Parameter Json\n",
+    "#### 3. Why Hindroid ?\n",
     "\n",
-    "```json\n",
-    "{\n",
-    "    \"fp\": \"../data/raw/smali\",\n",
-    "    \"map_dir\": \"../data/raw/testmap.json\",\n",
-    "    \"op\": \"../data/interim/appfeature\"\n",
-    "}\n",
-    "```\n",
+    "- hindroid is a very intuitive and reasonable approach. From our EDA, we can see the significant difference between Malware and Benign apps with api calls, packages, and blocks. Api calls mainly represents malware may frequently call some api call, and there are some frequently used package with malwares. Also, the code blocks are a good representations of complexity of apps since malware are less complext than benign apps in general.\n",
     "\n",
-    "- `fp`: the file path of smali code.\n",
-    "- `map_dir`: the file path of app map.\n",
-    "- `op`: the output path of processed apps\n",
+    "#### 4. Explaination of Approach\n",
+    "- Since there are many and many different api calls, package, blocks in every app, we need to handle the data when it comes large. We are limited with memory, then distributed packages rather than pandas are brought to table: Spark and Dask. In specific, we used dask to handle the task stream of extracting api calls, blocks, etc from smali files, and we used pyspark to do matrix construction since Spark can easily handle the case of adjancency matrix.\n",
     "\n",
-    "```bash\n",
-    "#after fetching data, processing data\n",
-    "python run.py process\n",
-    "```\n",
-    "\n",
-    "### Use Library Code directly\n",
-    "\n",
-    "```python\n",
-    "import sys\n",
-    "sys.path.append('../src')\n",
-    "import features, matrices, models, utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.models import baseline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'baseline' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-6c0a6e3bc845>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbaseline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'baseline' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hindroid' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-8785eeb85b59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhindroid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'hindroid' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "hindroid"
+    "- For B and P matrix, we first computted the API x Block matrix and API x Package matrix to reduce the computational cost. Since there are so any different api calls in our dataset, and number of unique block and number of package is much smaller."
    ]
   }
  ],
